--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,10 +50,18 @@ body {
     display: inline-block;
     font-size: 22px;
     line-height: 22px;
-    margin: 16px 16px 16px 20px;
+    margin: 66px 16px 16px 20px;
     padding: 14px 34px;
     text-align: center;
     cursor: pointer;
+  }
+
+  #title {
+      margin-bottom: 55px;
+  }
+
+  #initials {
+      margin-top: 35px;
   }
   
   .right-wrong {
