got scores to save to local storage and display on highscore page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,3 +74,13 @@ body {
     justify-content: space-evenly;
     flex-wrap: wrap;
   }
+
+  #clear {
+      margin-top: 100px;
+  }
+
+  #score-header {
+      text-decoration: underline;
+      margin-bottom: 60px;
+  }
+
